fixed overlaping classes

--- a/src/Components/home/Home.css
+++ b/src/Components/home/Home.css
@@ -1,7 +1,7 @@
-.myalign{
+.myalign1{
     position: absolute;
     top: 45%;
-    bottom: 0;
+    bottom: 0%;
     left: 10%;
     right: 10%;
 }
